# jbrt

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: preprocess_sampledata.ipynb  preprocess_snp.ipynb
src/jbrt/: __init__.py  config.py  snp.py
src/sampledata/: README.md  columns.py  nlbc_scraper.py  sample_pipeline.py  table_report.py  xlsx_report.py
